--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "bootstrap": "^4.6.0",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
+    "react-awesome-button": "^7.0.5",
     "react-bootstrap": "^1.6.3",
     "react-dom": "^17.0.2",
     "react-infinite-scroll-component": "^6.1.0",
-    "react-router-dom": "^5.3.0",
+    "react-router-dom": "^5.3.4",
     "react-scripts": "^4.0.3",
-    "react-wavy-transitions": "^1.1.1",
+    "react-transition-group": "^4.4.5",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
