--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-awesome-button": "^7.0.5",
     "react-bootstrap": "^1.6.3",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.7.1",
     "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^5.3.4",
     "react-scripts": "^4.0.3",
