--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^5.3.4",
     "react-scripts": "^4.0.3",
+    "react-spinners": "^0.13.8",
     "react-transition-group": "^4.4.5",
     "web-vitals": "^1.1.2"
   },
