--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/eslint-parser": "^7.21.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -47,6 +48,7 @@
     ]
   },
   "devDependencies": {
+    "eslint-plugin-react": "^7.32.2",
     "msw": "^0.35.0"
   }
 }
