--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react": "^17.0.2",
     "react-awesome-button": "^7.0.5",
     "react-bootstrap": "^1.6.3",
+    "react-cookie": "^4.1.1",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^17.0.2",
     "react-icons": "^4.7.1",
     "react-infinite-scroll-component": "^6.1.0",
